Stop long-running audio clips when hiding main window.